[package]
name = "chippy"
version = "1.0.0"
edition = "2021"
description = "CHIP-8 emulator with audio and input support"

[dependencies]
anyhow = "1.0.58"
byteorder = "1.4.3"
clap = { version = "3.2.10", features = ["derive"] }
egui = "0.18.1"
egui-macroquad = { path = "crates/egui-macroquad" }
fastrand = "1.7.0"
fixedbitset = "0.4.2"
macroquad = "0.3.23"
thiserror = "1.0.31"
