[package]
name = "chippy"
version = "1.0.0"
edition = "2021"
description = "CHIP-8 emulator with audio and input support"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.10", features = ["derive"] }
egui = "0.18.1"
egui-macroquad = { path = "crates/egui-macroquad" }
macroquad = "0.3.23"
thiserror = "1.0.31"
uncheckedarray = { path = "crates/uncheckedarray" }
